recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:7: error: not found: value abs
    tree(steps-1, length*shrink, -abs(angle), shrink)
                                  ^